Thu Oct 17 17:32:51 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c, string.c: use ruby_xsizedfree() and ruby_xsizedrealloc().

	* internal.h (SIZED_REALLOC_N): define a macro as REALLOC_N().

Thu Oct 17 17:11:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (console_emulator_p): check by comparison between
	  module handle of WriteConsoleW and kernel32.dll.

	* configure.in, win32/Makefile.sub, win32/setup.mak: no longer need
	  psapi.lib.

Thu Oct 17 16:53:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h: add new internal memory mangement functions.
	  * void *ruby_xsizedrealloc(void *ptr, size_t new_size, size_t old_size)
	  * void ruby_xsizedfree(void *x, size_t size)
	  These functions acccept additional size parameter to calculate more
	  accurate malloc_increase parameter which control GC timing.
	  [Feature #8985]

Thu Oct 17 14:21:34 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (rb_file_expand_path_internal): fix memory leaks at
	  a non-absolute home exception.

Thu Oct 17 14:06:39 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c (newobj_i): fix memory leak.
	  There is possibility to remain info due to missing FREEOBJ event.
	  FREEOBJ events are skipped while suppress_tracing state, for example,
	  during trace events are invoking.

Thu Oct 17 12:30:16 2013  Tanaka Akira  <akr@fsij.org>

	* lib/tsort.rb (TSort.each_strongly_connected_component_from):
	  Extracted from TSort#each_strongly_connected_component_from.

Thu Oct 17 11:07:06 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 941c21a.  Changes:

	  Restored method bundler wants to remove for compatibility.

	  Improvements to Gemfile compatibility.

	* test/rubygems:  ditto.

Thu Oct 17 08:08:11 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c (newobj_i): add workaround.
	  some bugs hits this check.
